editing down discussion

--- a/_posts/thesis_chapters/2024-1-5-Gdps2.md
+++ b/_posts/thesis_chapters/2024-1-5-Gdps2.md
@@ -1367,7 +1367,7 @@ For example, the use of CT concepts in a framework, listed as part of the initia
 
 ### Game design patterns as a intermediate-level construct to facilitate developing coding fluency
 
-**Summary:** Game design patterns provide learners with a suitable vehicle to engage with coding practices partly due to their position between abstract computational concepts and concrete implementations of code structures.
+**Summary:** Game design patterns provide learners with a suitable vehicle to engage with coding practices partly due to their position between abstract computational concepts and concrete implementations of code structures. This section explores potential implications for facilitators and researchers on use of GDP collection as an  intermediate pedagogical construct.
 
 <!-- #### Problematising conceptions of abstract / concrete concepts in computing education. -->
 
@@ -1375,26 +1375,26 @@ For example, the use of CT concepts in a framework, listed as part of the initia
 ### GDPs used to explore computational, design and systems concepts -->
 
 
-
 #### Re-examining the problem of PBL approaches considering the role of the potential of GDP collections
 
-As explored in the literature review a key challenge to project based learning is finding appropriate conceptual and practical frameworks to support domain specific working practices.
+As explored in the literature review a key challenge to project based learning is finding appropriate conceptual and practical frameworks to support domain specific working practices [@barron_doing_1998].
 
+Different types of scaffolding are identified to support PBL  and the authors highlight the trade offs between engagement via tinkering and pushing "principled understanding" [@barron_doing_1998, p.63]
 
+Design patterns have been explored as a form of scaffolding [@ertmer_scaffolding_2019] for project based learning experiences . Research on design online experiences shows value in interrelated scenarios, features and underlying patterns and principles [@mor_assessing_2014; @kali_collaborative_2006].
+
+<!-- NOTE - Lots of work on pedagogy of e learning done - but now seems quite dated? How did it stand up to time?  -->
 
 #### CT as an pedagogical framework
 
 <!-- NOTE - PARTS OF THIS WERE MOVED TO THE LIT REVIEW. -->
 
-In chapter two we examined the role of CT as a pedagogical framework, specifically concepts include: varied interpretations; the role of levels of abstraction for teachers and learners; and the value of epistemological pluralism as a way to value concrete approaches.
+In chapter two I described the characteristic and limits of computational thinking as a pedagogical framework, specifically concepts include: varied interpretations; the role of levels of abstraction for teachers and learners; and the value of epistemological pluralism as a way to value concrete approaches.
 
 This conception of levels abstraction can be applied in this learning design to the different scopes game making activity systems. Through this lens the most abstract activity system is the larger one who's objective, to make an engaging game that tells an environmental story, aligns with the problem level of LOA. The level between abstract and concrete is that of choosing, implementing and testing game design patterns, which aligns with design. The most concrete in this interpretation is then the implementation of different lines of code or creation and migration of digital assets.
 
 
-
-#### Potential implications for facilitators and researchers on use of GDP collection / intermediate construct
 NOTE - ideally change the headings here to be more specific
-
 
 <!-- As explored in the design chapter, later revisions of the design of supporting materials for each GDP included links to online descriptions of design, systems and computational concepts. Thus, beginning with experience and progressing to analysis in a sway that mirrors reflective professional practice. However analysis of my journal entries show  -->
 
@@ -1404,7 +1404,7 @@ In professional coding environment and training programmes design patterns, part
 
     In order to be useful, patterns must present an abstraction of good practice at a meaningful level of granularity. Formulations that are too abstract will be impractical in real design use; those that are too specific will be difficult to re-use in new scenarios.[@dearden_pattern_2006, p. 20]
 
-Earlier in this chapter the work of Eriksson and colleagues using gameplay design patterns with young people [-@eriksson_using_2019] drew inspiration from the value of design patterns as a form of "intermediate-level concept" as advocated by fellow researchers as a way of sharing results of research [@barendregt_intermediate-level_2018]. Similarly, the implementation GDPs was the identification as a key unit of activity and analysis for this study, the justification being that it was at this level that richest use and development of tools and processes by the emerging community took place.
+In chapter two I outlined the work of Eriksson and colleagues using gameplay design patterns with young people [-@eriksson_using_2019] which drew inspiration from the value of design patterns as a form of "intermediate-level concept" as advocated by fellow researchers as a way of sharing results of research [@barendregt_intermediate-level_2018]. Similarly, here the implementation of GDPs as a key unit of activity and analysis for this study, the justification being that it was at this level that richest use and development of tools and processes by the emerging community took place.
 
 The observations of this chapter show the advantages of GDP as an intermediate design concept, hovering in the space between too concrete to be repeated and too abstract to be grasped by novice game makers. GDPs create a tangible link between concrete player experience and the affordances of a guided creative process. Learners use of GDP as relatable and flexible constructs that facilitate  communication, sustaining engagement, planning and division of labour. The creation of designed objects using GDPS aid the personal appropriation and the propagation of technical and social processes game making practices.  Previously abstract concepts or processes become concrete through familiarisation via direct use and indirect observations through community participation. In many of the outlined uses of GDPs in chapter we can see processes at play that help bridge shifts in design perspective. Both the GDPs and the sub-actions of the wider activity design become short-cuts which stand in for previously tricky to complete set of actions. Rather than promising the transfer abstract concepts to other domains, we see learners build competency in participation in replicable processes. These processes which aid future iterations of the GDP implementation design cycle. The process of operationalisation of these sets of actions contributes to the creation of an informal, complex networked resource of operations which complement the more visible curated catalogue of GDPs.
 
@@ -1413,11 +1413,7 @@ Game design patterns or their fragments are used as a form of design short cuts.
 
 NOTE - SUPPORT NEEDED FOR SOME OF THE BELOW - AND MORE DISCUSSION NEEDED ON CHALLENGE IN GENERAL
 
-There are challenges of the use of these short cuts and at a more general the design choice to lead with a menu of intermediate-level constructs in the form of a menu of GDPs. There may be confusion over use of terms to new comers and these GPD related terms may hide more complex patterns within the name. For example, the shortcuts in Ed and Ma's interaction hides a large amount of problems solving which seems "overwhelming". GDPs can limit the ideation process through an accelerated approach. Also as the menus themselves are not all used by students, and while GDPs do propagate from student to student, which risk further constraints on the process of asking questions about user experience and exploring ideas before committing to implementation.
-
-Despite these challenges, research of data overwhelmingly indicates the positive affect of participants in implementation of GDPs. This is shown particularly in a growing sense of mastery towards technical processes becoming second nature and the resulting ability to share them with family and other peer groups. On a related note, the next section addresses the development and nature of agency in this learning design.
-
-
+There are challenges of the use of these short cuts and at a more general the design choice to lead with a menu of intermediate-level constructs in the form of a menu of GDPs. There may be confusion over use of terms to new comers and these GPD related terms may hide more complex patterns within the name. For example, the shortcuts in Mark and Ed's interaction hides a large amount of problems solving which seems "overwhelming". GDPs can limit the ideation process through an accelerated approach. Also as the menus themselves are not all used by students, and while GDPs do propagate from student to student, which risk further constraints on the process of asking questions about user experience and exploring ideas before committing to implementation.
 
 
 ## Chapter Conclusion
@@ -1438,7 +1434,7 @@ GDPs served both researchers and participants by _providing a common language_ t
 
 ### Transition to next chapter
 
-This chapter focused on GDPs which while mostly interpersonal, guided participation also touched on emerging cultural elements of the learning community. The next chapter explores culturals aspects in greater detail focusing on a drama process and related research as a lens for analysis.
+This chapter focused on GDPs which while mostly interpersonal, guided participation also touched on emerging cultural elements of the learning community. Despite these challenges, research of data overwhelmingly indicates the positive affect of participants in implementation of GDPs. This is shown particularly in a growing sense of mastery towards technical processes becoming second nature and the resulting ability to share them with family and other peer groups. This complements previous observations on the development and nature of agency in this learning design.  The next chapter explores cultural aspects in greater detail continuing to explore emergent agency in this design by primarily focusing on a drama process as a lens for analysis.
 
 
 
