trying to structrure the discussion

--- a/_posts/thesis_chapters/2024-1-5-Gdps2.md
+++ b/_posts/thesis_chapters/2024-1-5-Gdps2.md
@@ -1383,9 +1383,11 @@ Different types of scaffolding are identified to support PBL  and the authors hi
 
 Design patterns have been explored as a form of scaffolding [@ertmer_scaffolding_2019] for project based learning experiences . Research on design online experiences shows value in interrelated scenarios, features and underlying patterns and principles [@mor_assessing_2014; @kali_collaborative_2006].
 
+In computing eduction pattern based instruction has benefits of making complex problems more modular and concrete [@muller_almost_2004-1; @waite_teaching_2021].
+
 <!-- NOTE - Lots of work on pedagogy of e learning done - but now seems quite dated? How did it stand up to time?  -->
 
-#### CT as an pedagogical framework
+#### Design patterns as a mid-level pedagogical framework 
 
 <!-- NOTE - PARTS OF THIS WERE MOVED TO THE LIT REVIEW. -->
 
