--- a/_posts/thesis_chapters/2024-1-5-Gdps2.md
+++ b/_posts/thesis_chapters/2024-1-5-Gdps2.md
@@ -1248,11 +1248,11 @@ For example, the work of the child to add 21 levels to their own game served as 
     Toby: (To someone else  calling for attention)  No I’m helping Bertie.
     _(Toby then follows Bertie to his workstation to help him implement more levels.)_
 
-When Toby moves to Bertie's game he playtests it and then looks at the code. He notes that Bertie has added a variable for a fourth level but then goes on to demonstrate to to add an array representing the next level, and a conditional statement to select level 4 when level 3 is completed. At Toby uses the keyboard completes this work, Bertie reads aloud the code which is being typed in by Te.
+When Toby moves to Bertie's game he playtests it and then looks at the code. He notes that Bertie has added a variable for a fourth level but then goes on to demonstrate to to add an array representing the next level, and a conditional statement to select level 4 when level 3 is completed. At Toby uses the keyboard completes this work, Bertie reads aloud the code which is being typed in by Toby.
 
 Exchanges like this allow the propagation of GDPs. The process of playing a game of another and sharing your appreciation of it invites participants to add new patterns to their own game. In this example, the process is very direct with the one asking another to help them directly. It is very likely that Bertie has noticed Toby helping others add levels to their games and thus this may help him to feel empowered to do the same. The propagation here is emerges from and is completed entirely through peer activity. A different and more common pattern of propagation was that participants notice and comment on a game element or pattern during during playtesting, and then to use supporting resources or facilitator help to implement it. A less frequent pattern involved participants' diligent and deliberate use of supporting resources to identify and implement features without peer influence. Typical examples of propagating patterns include placing hazards in tricky places like a lava pit, the use of moving enemies and changes to jump dynamics.
 
-#### New GDPs emerged from existing patterns through peer activity during playtesting
+**New GDPs emerged from existing patterns through peer activity during playtesting**
 
 In addition to the propagation of main game design patterns, sub patterns and related design concepts emerged organically from the community. The concept of safe zone in the game of Pearl and Clive arrived as a direct result of after adding a moving enemies GDP, the extensive use of that pattern dominates the game challenge to such an extent that it is essential for players to quickly identify and use 'safe zones'.
 DEVELOP
@@ -1313,48 +1313,27 @@ Article on intangibility of game feel.
 
 ## Discussion on the use of game design patterns in the 3M learning design
 
-The majority of this chapter has focused on interpretation of observations of participant interactions. A deeper exploration of concepts is present in the following chapter which synthesises the observations of this study in relation to broader research. The remainder of this chapter begins this process with a closer look at the use of game design patterns as a intermediate design construct to facilitate coding education and at learner agency in relation to the user of GDPs in this data.
+The majority of this chapter has focused on interpretation of observations of participant interactions and the resulting cultural processes. The remainder of this chapter discusses the use of game design patterns as a intermediate design construct to facilitate coding education and learner agency.
 
 <!-- A deeper exploration of other concepts may suit another chapter looking at synthesing observations in relation to broader research.  -->
 
 
 ### Discussion on GDPs, emerging processes and learner agency
+<!-- NOTE -  REFRAMING WITH A FOCUS ON AGENCY - IDEALLY THE LATER -->
 
-This chapter has begun a process of exploration of the nature and evolution of agency in the practices of the participants through the varied use of GDPs. In this final section I continue to explore emerging thoughts on learner agency in my design through the lens of existing research.
+**Summary:** Game design patterns provide learners with a suitable vehicle to engage with coding practices partly due to their position between abstract computational concepts and concrete implementations of code structures. This section explores potential implications for facilitators and researchers on use of GDP collection as an  intermediate pedagogical construct.
 
-#### Tensions between facilitating agency and norming practices
-
-This chapter has explored the use of game design patterns by participants to aid the development of their game making practices. Participants are able to use the affordances of the existing learning design and add their own evolving practice to them as a way of expressing and building agency.
-
-<!-- Examples of this dynamic agency include the use of graphical code structures, asking for peer or facilitator support etc. -->
-
-However as a seeming counterpoint to this growing agency is the norming effects of concepts that gain community currency in playtesting. The repeated attempts by participants to make the jumping mechanic of Molly less frustrating can be seen as a potential drag on the agency or autonomy of Molly as a designer. However this may be a false dichotomy. Such norming practices can be seen from a different perspective. The following chapter begins with a deeper exploration of learner agency in relation to existing research in this domain.
-
-
-#### Discussion on the use of design patterns and pattern catalogues
-
-DOES THIS NEED MOVING OR REFRAMING WITH A FOCUS ON AGENCY - IDEALLY THE LATER
-
-The process of creating a learning design where students were able to choose from a curated set of game design patterns is covered in the design chapter of this thesis. In this section the response of users is explored in relation to other research on this areas.
-
-The concept of a restricted activity is outlined in varied educational concepts including Bruner's reducing degrees of freedom [@wood_role_1976].
+The process of creating a learning design where students were able to choose from a curated set of game design patterns is covered in the design chapter of this thesis. This chapter has begun a process of exploration of the nature and evolution of agency in the practices of the participants through the varied use of GDPs. In this final section I continue to explore emerging thoughts on learner agency, the use of game design patterns, especially within the context of a collection of patterns.
+In this section the response of users is explored in relation to other research on this areas.
 
  <!-- Using a choice of patterns when compared to instructional tutorials (previously explored in methods chapter)  -->
 
-In the 3M design the process of offering a choice of games patterns emerged to counter a previous open design process of which many learners found too challenging. The patterns emerged chiefly in response to requests from learners and partly from facilitator decision making which broadly matched the criteria of the other study. However, in Eriksson's study the authors selected from an extensive, pre-existing pattern collections [@bjork_patterns_2005].
-
-
-
-#### The freedoms and restrictions of playgrounds
-
-While the process of direction may be less totally learner-driven approach than the first iteration of the learning design P1, working with a starting menu of game patterns with support still provides challenges to learners and complexity of working processes. Design blockages still occur, and participants have to work with facilitators in depth to overcome issues. There is the possibility to adapt existing patterns, to add new patterns from outside the curated collection or to shift to new game paradigm requiring a different set of patterns altogether.
-
-In this research, similar metaphors have emerged in the pedagogical and technical process surrounding the concept of playgrounds and gardens. In the previous section the use of a curated set of design patterns can be referred to as a walled garden or sandbox. The process of checking the performance of games is called playtesing. The web-based environment which reduce the complexity of web development and provide community and immediate feedback are named code playgrounds. While some of this language is specific to the creation of games, other terms are also prevalent in non-game coding.
-
-These metaphors invite a connection to play theories concept of as the magic circle. Play theorist outline the value of stepping into a more controlled area of voluntary experimentation where the fear of failure is reduced. Game rules are norms which seed participation in community processes. The playful context of the game's magic circle can facilitate participants to adapt norms and rules to their own playing styles. Through this lens, the interaction of playtesting, code playgrounds and a sandbox of game patterns emerge as a key practices to facilitate and maintain learner agency. The discussion of the next chapter explores the intersection of these elements in more detail.
+The concept of a restricted activity is outlined in varied educational concepts including Bruner's reducing degrees of freedom [@wood_role_1976]. In the 3M design the process of offering a choice of games patterns emerged to counter a previous open design process of which many learners found too challenging. The patterns emerged chiefly in response to requests from learners and partly from facilitator decision making which broadly matched the criteria of the other study. However, in Eriksson's study the authors selected from an extensive, pre-existing pattern collections [@bjork_patterns_2005].
 
 
 <!-- For exa In the language of double stimulation, a tension of relative inactivity at times is overcome by invitations to playtest and resulting interaction. -->
+
+
 <!-- ### Link Paragraph to next chapter
 
 A theme to follow up in the Maps / personal learning chapter is that of picking up on some of the behaviour of participants, especially that of experienced parents, experience either in coding practices of supporting their children. Once identified, how could beneficial interactions be encouraged in the next iteration of design.
@@ -1365,27 +1344,28 @@ Examples include;
 
 For example, the use of CT concepts in a framework, listed as part of the initial design pattern card, which could then be discussed, ticked off or otherwise reflected on. -->
 
-### Game design patterns as a intermediate-level construct to facilitate developing coding fluency
+<!-- #### Re-examining the problem of PBL approaches considering the role of the potential of GDP collections -->
 
-**Summary:** Game design patterns provide learners with a suitable vehicle to engage with coding practices partly due to their position between abstract computational concepts and concrete implementations of code structures. This section explores potential implications for facilitators and researchers on use of GDP collection as an  intermediate pedagogical construct.
-
-<!-- #### Problematising conceptions of abstract / concrete concepts in computing education. -->
-
-<!-- NOTE - ALSO DRAW ON TIHE FOLLOWING IN PARKED
-### GDPs used to explore computational, design and systems concepts -->
-
-
-#### Re-examining the problem of PBL approaches considering the role of the potential of GDP collections
-
-As explored in the literature review a key challenge to project based learning is finding appropriate conceptual and practical frameworks to support domain specific working practices [@barron_doing_1998].
-
-Different types of scaffolding are identified to support PBL  and the authors highlight the trade offs between engagement via tinkering and pushing "principled understanding" [@barron_doing_1998, p.63]
-
-Design patterns have been explored as a form of scaffolding [@ertmer_scaffolding_2019] for project based learning experiences . Research on design online experiences shows value in interrelated scenarios, features and underlying patterns and principles [@mor_assessing_2014; @kali_collaborative_2006].
+As explored in the literature review a key challenge to project based learning is finding appropriate conceptual and practical frameworks to scaffold domain specific working practices [@barron_doing_1998]. Different types of scaffolding are available to support PBL and the authors highlight trade-offs between engagement via tinkering and pushing "principled understanding" [@barron_doing_1998, p.63].
+Design patterns have been explored as a form of scaffolding [@ertmer_scaffolding_2019] for project based learning experiences. Research on design online experiences shows value in interrelated scenarios, features and underlying patterns and principles [@mor_assessing_2014; @kali_collaborative_2006].
 
 In computing eduction pattern based instruction has benefits of making complex problems more modular and concrete [@muller_almost_2004-1; @waite_teaching_2021].
 
 <!-- NOTE - Lots of work on pedagogy of e learning done - but now seems quite dated? How did it stand up to time?  -->
+
+
+#### Tensions between facilitating agency and norming practices
+
+Participants are able to use the affordances of the existing learning design and add their own evolving practice to them as a way of expressing and building agency.
+
+However, as a seeming counterpoint to this growing agency is the norming effects of concepts that gain community currency in playtesting. The repeated attempts by participants to make the jumping mechanic of Molly less frustrating can be seen as a potential drag on the agency or autonomy of Molly as a designer. However this may be a false dichotomy. Such norming practices can be seen from a different perspective. The following chapter begins with a deeper exploration of learner agency in relation to existing research in this domain.
+
+<!-- Examples of this dynamic agency include the use of graphical code structures, asking for peer or facilitator support etc. -->
+
+
+While the process of direction may be less totally learner-driven approach than the first iteration of the learning design P1, working with a starting menu of game patterns with support still provides challenges to learners and complexity of working processes. Design blockages still occur, and participants have to work with facilitators in depth to overcome issues. There is the possibility to adapt existing patterns, to add new patterns from outside the curated collection or to shift to new game paradigm requiring a different set of patterns altogether.
+
+SOME MORE DETAILED SYNTHESIS OF GDP AND AGENCY.
 
 #### Design patterns as a mid-level pedagogical framework
 
