--- a/_posts/thesis_chapters/tocs/2024-1-5-Gdps2.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-1-5-Gdps2.md_toc.md
@@ -1,90 +1,106 @@
--   [Research Questions - Feb 2024](#research-questions---feb-2024)
--   [Notes to restructure](#notes-to-restructure)
-    -   [Chapter outline](#chapter-outline)
-    -   [On GDP as a germ-cell and unit of analysis - and chapter
+-   [[0.1]{.toc-section-number} Research Questions - Feb
+    2024](#research-questions---feb-2024)
+-   [[0.2]{.toc-section-number} Notes to
+    restructure](#notes-to-restructure)
+    -   [[0.2.1]{.toc-section-number} Chapter outline](#chapter-outline)
+    -   [[0.2.2]{.toc-section-number} On GDP as a germ-cell and unit of
+        analysis - and chapter
         outline](#on-gdp-as-a-germ-cell-and-unit-of-analysis---and-chapter-outline)
--   [Study of Vignette A](#study-of-vignette-a)
-    -   [Descriptive Commentary on Vignette
+-   [[0.3]{.toc-section-number} Study of Vignette
+    A](#study-of-vignette-a)
+    -   [[0.3.1]{.toc-section-number} Descriptive Commentary on Vignette
         A](#descriptive-commentary-on-vignette-a)
--   [Observations and analysis of use of Game Design Patterns by
+-   [[0.4]{.toc-section-number} Observations and analysis of use of Game
+    Design Patterns by
     participants](#observations-and-analysis-of-use-of-game-design-patterns-by-participants)
--   [Personal Appropriation](#personal-appropriation)
-    -   [GDPs used to explore computational, design and systems concepts
-        from a perspective of personal
-        appropriation](#gdps-used-to-explore-computational-design-and-systems-concepts-from-a-perspective-of-personal-appropriation)
--   [Guided Participation](#guided-participation)
-    -   [GDPs offer the potential to assist project navigation, acting
-        as a framework for code examples and step-by-step
+-   [[0.5]{.toc-section-number} The role of GDPs in the personal
+    appropriation of computational, design and systems
+    concepts](#the-role-of-gdps-in-the-personal-appropriation-of-computational-design-and-systems-concepts)
+-   [[0.6]{.toc-section-number} Guided
+    Participation](#guided-participation)
+    -   [[0.6.1]{.toc-section-number} GDPs offer the potential to assist
+        project navigation, acting as a framework for code examples and
+        step-by-step
         tutorials](#gdps-offer-the-potential-to-assist-project-navigation-acting-as-a-framework-for-code-examples-and-step-by-step-tutorials)
-    -   [GDPs used to scaffold ideation
+    -   [[0.6.2]{.toc-section-number} GDPs used to scaffold ideation
         processes](#gdps-used-to-scaffold-ideation-processes)
-        -   [Problem solving practices as a fund of knowledge (but not
-            really
+        -   [[0.6.2.1]{.toc-section-number} Problem solving practices as
+            a fund of knowledge (but not really
             GDP)](#problem-solving-practices-as-a-fund-of-knowledge-but-not-really-gdp)
-        -   [Paper prototyping mapping visual
-            matrix](#paper-prototyping-mapping-visual-matrix)
-        -   [GDPs as used by participants in their prioritisation in the
-            ideation
+        -   [[0.6.2.2]{.toc-section-number} Paper prototyping mapping
+            visual matrix](#paper-prototyping-mapping-visual-matrix)
+        -   [[0.6.2.3]{.toc-section-number} GDPs as used by participants
+            in their prioritisation in the ideation
             process](#gdps-as-used-by-participants-in-their-prioritisation-in-the-ideation-process)
-    -   [GDPs aiding the process of division of
+    -   [[0.6.3]{.toc-section-number} GDPs aiding the process of
+        division of
         labour](#gdps-aiding-the-process-of-division-of-labour)
-        -   [The development of divisions of labour - MOVED FROM NEXT
+        -   [[0.6.3.1]{.toc-section-number} The development of divisions
+            of labour - MOVED FROM NEXT
             CHAPTER](#the-development-of-divisions-of-labour---moved-from-next-chapter)
-    -   [The role of GDP used in emerging tool use, technical processes
-        and specialist
+    -   [[0.6.4]{.toc-section-number} The role of GDP used in emerging
+        tool use, technical processes and specialist
         language](#the-role-of-gdp-used-in-emerging-tool-use-technical-processes-and-specialist-language)
-        -   [Other examples of GDP driving adoption of technical
+        -   [[0.6.4.1]{.toc-section-number} Other examples of GDP
+            driving adoption of technical
             processes](#other-examples-of-gdp-driving-adoption-of-technical-processes)
-    -   [GDPs in relation to project revision and
+    -   [[0.6.5]{.toc-section-number} GDPs in relation to project
+        revision and
         debugging](#gdps-in-relation-to-project-revision-and-debugging)
-        -   [Code Patching as a guided
+        -   [[0.6.5.1]{.toc-section-number} Code Patching as a guided
             process](#code-patching-as-a-guided-process)
-        -   [GDPs used to nurture tactical responses to coding
+        -   [[0.6.5.2]{.toc-section-number} GDPs used to nurture
+            tactical responses to coding
             errors](#gdps-used-to-nurture-tactical-responses-to-coding-errors)
-        -   [Concluding remarks on debugging and
+        -   [[0.6.5.3]{.toc-section-number} Concluding remarks on
+            debugging and
             revision](#concluding-remarks-on-debugging-and-revision)
--   [Cultural Dimension](#cultural-dimension)
-    -   [The role of GDPs to facilitate learners to design for
+-   [[0.7]{.toc-section-number} Cultural Dimension](#cultural-dimension)
+    -   [[0.7.1]{.toc-section-number} The role of GDPs to facilitate
+        learners to design for
         others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others)
-        -   [Referring to GDPs (especially during playtesting) can help
-            scaffold the process of imagining the end user
+        -   [[0.7.1.1]{.toc-section-number} Referring to GDPs
+            (especially during playtesting) can help scaffold the
+            process of imagining the end user
             experiences.](#referring-to-gdps-especially-during-playtesting-can-help-scaffold-the-process-of-imagining-the-end-user-experiences.)
-        -   [GDPs, the scale/nature of project goals & designing for
+        -   [[0.7.1.2]{.toc-section-number} GDPs, the scale/nature of
+            project goals & designing for
             others](#gdps-the-scalenature-of-project-goals-designing-for-others)
-        -   [Other examples and interpretation on designing for others /
-            shifts of
+        -   [[0.7.1.3]{.toc-section-number} Other examples and
+            interpretation on designing for others / shifts of
             perspective](#other-examples-and-interpretation-on-designing-for-others-shifts-of-perspective)
-    -   [Role of playtesting and feedback and
-        GDPs](#role-of-playtesting-and-feedback-and-gdps)
-        -   [GDP concepts and language used in informal feedback for
-            peers to influence modification of
+    -   [[0.7.2]{.toc-section-number} Role of playtesting and feedback
+        and GDPs](#role-of-playtesting-and-feedback-and-gdps)
+        -   [[0.7.2.1]{.toc-section-number} GDP concepts and language
+            used in informal feedback for peers to influence
+            modification of
             games](#gdp-concepts-and-language-used-in-informal-feedback-for-peers-to-influence-modification-of-games)
-        -   [The propagation of use of GDPs through
+        -   [[0.7.2.2]{.toc-section-number} The propagation of use of
+            GDPs through
             playtesting](#the-propagation-of-use-of-gdps-through-playtesting)
-        -   [New GDPs emerged from existing patterns through peer
-            activity during
-            playtesting](#new-gdps-emerged-from-existing-patterns-through-peer-activity-during-playtesting)
-    -   [GDPs facilitate the use of wider funds of
+    -   [[0.7.3]{.toc-section-number} GDPs facilitate the use of wider
+        funds of
         knowledge](#gdps-facilitate-the-use-of-wider-funds-of-knowledge)
-        -   [Family funds of knowledge](#family-funds-of-knowledge)
-        -   [Funds of knowledge from professional and enthusiast
+        -   [[0.7.3.1]{.toc-section-number} Family funds of
+            knowledge](#family-funds-of-knowledge)
+        -   [[0.7.3.2]{.toc-section-number} Funds of knowledge from
+            professional and enthusiast
             communities](#funds-of-knowledge-from-professional-and-enthusiast-communities)
--   [Discussion on the use of game design patterns in the 3M learning
+-   [[0.8]{.toc-section-number} Discussion on the use of game design
+    patterns in the 3M learning
     design](#discussion-on-the-use-of-game-design-patterns-in-the-3m-learning-design)
-    -   [Discussion on GDPs, emerging processes and learner
+    -   [[0.8.1]{.toc-section-number} Discussion on GDPs, emerging
+        processes and learner
         agency](#discussion-on-gdps-emerging-processes-and-learner-agency)
-        -   [Tensions between facilitating agency and norming
+        -   [[0.8.1.1]{.toc-section-number} Tensions between
+            facilitating agency and norming
             practices](#tensions-between-facilitating-agency-and-norming-practices)
-        -   [Discussion on the use of design patterns and pattern
-            catalogues](#discussion-on-the-use-of-design-patterns-and-pattern-catalogues)
-        -   [The freedoms and restrictions of
-            playgrounds](#the-freedoms-and-restrictions-of-playgrounds)
-    -   [Game design patterns as a intermediate-level construct to
-        facilitate developing coding
-        fluency](#game-design-patterns-as-a-intermediate-level-construct-to-facilitate-developing-coding-fluency)
-        -   [Potential implications for facilitators and
-            researchers](#potential-implications-for-facilitators-and-researchers)
--   [Chapter Conclusion](#chapter-conclusion)
-    -   [Summary of the pedagogical opportunities of Game Design
+        -   [[0.8.1.2]{.toc-section-number} Design patterns as a
+            mid-level pedagogical
+            framework](#design-patterns-as-a-mid-level-pedagogical-framework)
+-   [[0.9]{.toc-section-number} Chapter Conclusion](#chapter-conclusion)
+    -   [[0.9.1]{.toc-section-number} Summary of the pedagogical
+        opportunities of Game Design
         Patterns](#summary-of-the-pedagogical-opportunities-of-game-design-patterns)
-    -   [Transition to next chapter](#transition-to-next-chapter)
+    -   [[0.9.2]{.toc-section-number} Transition to next
+        chapter](#transition-to-next-chapter)
