--- a/_posts/thesis_chapters/2024-1-5-Gdps2.md
+++ b/_posts/thesis_chapters/2024-1-5-Gdps2.md
@@ -6,100 +6,12 @@ zotero:
   author-in-text: false # when true, enabled fake author-name-only cites by replacing it with the text of the last names of the authors
   csl-style: harvard-manchester-metropolitan-university # pre-fill the style
 layout: post
+number-sections: true
 categories: chapter
 title:  5. The Use of Gameplay Design Patterns "It’s like a project in itself, really"
 ---
--   [Research Questions - Feb 2024](#research-questions---feb-2024)
--   [Notes to restructure](#notes-to-restructure)
-    -   [Chapter outline](#chapter-outline)
-    -   [On GDP as a germ-cell and unit of analysis - and chapter
-        outline](#on-gdp-as-a-germ-cell-and-unit-of-analysis---and-chapter-outline)
--   [Study of Vignette A](#study-of-vignette-a)
-    -   [Descriptive Commentary on Vignette
-        A](#descriptive-commentary-on-vignette-a)
--   [Observations and analysis of use of Game Design Patterns by
-    participants](#observations-and-analysis-of-use-of-game-design-patterns-by-participants)
--   [Personal Appropriation](#personal-appropriation)
-    -   [GDPs used to explore computational, design and systems concepts
-        from a perspective of personal
-        appropriation](#gdps-used-to-explore-computational-design-and-systems-concepts-from-a-perspective-of-personal-appropriation)
--   [Guided Participation](#guided-participation)
-    -   [GDPs offer the potential to assist project navigation, acting
-        as a framework for code examples and step-by-step
-        tutorials](#gdps-offer-the-potential-to-assist-project-navigation-acting-as-a-framework-for-code-examples-and-step-by-step-tutorials)
-    -   [GDPs used to scaffold ideation
-        processes](#gdps-used-to-scaffold-ideation-processes)
-        -   [Problem solving practices as a fund of knowledge (but not
-            really
-            GDP)](#problem-solving-practices-as-a-fund-of-knowledge-but-not-really-gdp)
-        -   [Paper prototyping mapping visual
-            matrix](#paper-prototyping-mapping-visual-matrix)
-        -   [GDPs as used by participants in their prioritisation in the
-            ideation
-            process](#gdps-as-used-by-participants-in-their-prioritisation-in-the-ideation-process)
-    -   [GDPs aiding the process of division of
-        labour](#gdps-aiding-the-process-of-division-of-labour)
-        -   [The development of divisions of labour - MOVED FROM NEXT
-            CHAPTER](#the-development-of-divisions-of-labour---moved-from-next-chapter)
-    -   [The role of GDP used in emerging tool use, technical processes
-        and specialist
-        language](#the-role-of-gdp-used-in-emerging-tool-use-technical-processes-and-specialist-language)
-        -   [Other examples of GDP driving adoption of technical
-            processes](#other-examples-of-gdp-driving-adoption-of-technical-processes)
-    -   [GDPs in relation to project revision and
-        debugging](#gdps-in-relation-to-project-revision-and-debugging)
-        -   [Code Patching as a guided
-            process](#code-patching-as-a-guided-process)
-        -   [GDPs used to nurture tactical responses to coding
-            errors](#gdps-used-to-nurture-tactical-responses-to-coding-errors)
-        -   [Concluding remarks on debugging and
-            revision](#concluding-remarks-on-debugging-and-revision)
--   [Cultural Dimension](#cultural-dimension)
-    -   [The role of GDPs to facilitate learners to design for
-        others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others)
-        -   [Referring to GDPs (especially during playtesting) can help
-            scaffold the process of imagining the end user
-            experiences.](#referring-to-gdps-especially-during-playtesting-can-help-scaffold-the-process-of-imagining-the-end-user-experiences.)
-        -   [GDPs, the scale/nature of project goals & designing for
-            others](#gdps-the-scalenature-of-project-goals-designing-for-others)
-        -   [Other examples and interpretation on designing for others /
-            shifts of
-            perspective](#other-examples-and-interpretation-on-designing-for-others-shifts-of-perspective)
-    -   [Role of playtesting and feedback and
-        GDPs](#role-of-playtesting-and-feedback-and-gdps)
-        -   [GDP concepts and language used in informal feedback for
-            peers to influence modification of
-            games](#gdp-concepts-and-language-used-in-informal-feedback-for-peers-to-influence-modification-of-games)
-        -   [The propagation of use of GDPs through
-            playtesting](#the-propagation-of-use-of-gdps-through-playtesting)
-        -   [New GDPs emerged from existing patterns through peer
-            activity during
-            playtesting](#new-gdps-emerged-from-existing-patterns-through-peer-activity-during-playtesting)
-    -   [GDPs facilitate the use of wider funds of
-        knowledge](#gdps-facilitate-the-use-of-wider-funds-of-knowledge)
-        -   [Family funds of knowledge](#family-funds-of-knowledge)
-        -   [Funds of knowledge from professional and enthusiast
-            communities](#funds-of-knowledge-from-professional-and-enthusiast-communities)
--   [Discussion on the use of game design patterns in the 3M learning
-    design](#discussion-on-the-use-of-game-design-patterns-in-the-3m-learning-design)
-    -   [Discussion on GDPs, emerging processes and learner
-        agency](#discussion-on-gdps-emerging-processes-and-learner-agency)
-        -   [Tensions between facilitating agency and norming
-            practices](#tensions-between-facilitating-agency-and-norming-practices)
-        -   [Discussion on the use of design patterns and pattern
-            catalogues](#discussion-on-the-use-of-design-patterns-and-pattern-catalogues)
-        -   [The freedoms and restrictions of
-            playgrounds](#the-freedoms-and-restrictions-of-playgrounds)
-    -   [Game design patterns as a intermediate-level construct to
-        facilitate developing coding
-        fluency](#game-design-patterns-as-a-intermediate-level-construct-to-facilitate-developing-coding-fluency)
-        -   [Potential implications for facilitators and
-            researchers](#potential-implications-for-facilitators-and-researchers)
--   [Chapter Conclusion](#chapter-conclusion)
-    -   [Summary of the pedagogical opportunities of Game Design
-        Patterns](#summary-of-the-pedagogical-opportunities-of-game-design-patterns)
-    -   [Transition to next chapter](#transition-to-next-chapter)
 
+$toc$
 
 ## Research Questions - Feb 2024
 
@@ -125,7 +37,7 @@ https://docs.google.com/document/d/12EmPhm8E_TE4rimvRdRf2wC5XRwT3EXO4cRZ99RNkTQ/
 
 
 
-### Chapter outline
+## Chapter outline
 
 In the last chapter I outlined use of tools often focusing on and emerging tensions in activity on a micro level. This chapter analyses this emergent activity at a mid-level scope between concrete tool use and the wider cultural context of the game making community. I focus on the implementation of individual game design patterns (GDPs) and in doing so addresses how data gathered informs thinking on the research question - _how can game design patterns support the development of coding practices by novices_?
 This chapter begins with re-examining of game design patterns and game play design patterns in the context of a community of novice coders. Following this a vignette of parent child interaction in game making process introduces an overview of interactions of that pair to help contextualise findings. The chapter then undertakes a systematic analysis of the use of game design patterns by participants drawing on detailed observations of practice. A discussion section explores implications and observations from these findings in relation to existing research and concepts. As part if this discussion, I draw on the examples of use of game design patterns in practice to explore the analysis of GDPs as a mid-level construct, of use both to designers and as a pedagogical tool for those seeking to help novice coders become inculcated into a coding community.
@@ -140,7 +52,7 @@ And the coding structure here
 https://docs.google.com/document/d/19PafC_w_7uObYL4v86IGeeFZTw2yKxjHfP_k85rHk_s/edit# -->
 
 
-### On GDP as a germ-cell and unit of analysis - and chapter outline
+## On GDP as a germ-cell and unit of analysis - and chapter outline
 
 
 In the introduction, I outlined some of the broader challenges of sharing practice and research to practically support the learning of coding practices beyond the immediate context of the research in question. The choice of what scope of activity to examine in detail is relevant to this challenge. This chapter centres on an interpretation of the implementation of game design patterns (GDPs) as a unit of analysis or germ-cell of activity.  
